--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,18 @@ dependencies {
     compileOnly("org.projectlombok:lombok")
     implementation("io.micronaut:micronaut-validation")
     runtimeOnly("ch.qos.logback:logback-classic")
+    
+    //Test deps
+   	testImplementation("org.mockito:mockito-core")
+    // https://mvnrepository.com/artifact/org.mockito/mockito-inline
+	testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.9.0'
+    
+    
+    // https://mvnrepository.com/artifact/org.assertj/assertj-core
+	testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
+    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.1'
+    
 }
 
 
